# End-to-End-ML-Regression-Project

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
models/: target_encoder.pkl  xgb_best_model.pkl  xgb_model.pkl
notebooks/: 00_data_split.ipynb  02_feature_eng_encoding.ipynb  03_baseline_model.ipynb  04_linear_regression_regularization.ipynb  05_XGBoost.ipynb  06_hyperparameter_tuning_MFLow.ipynb  07_S3_push_datasets_AWS.ipynb
src/api/: main.py
src/feature_pipeline/: feature_engineering.py  load.py  preprocess.py
src/inference_pipeline/: inference.py
src/training_pipeline/: eval.py  train.py  tune.py
test/: smoke_test.ipynb  test_features.py  test_inference.py  test_training.py
